update: 新增分类列表获取，分类创建，分类修改，分类删除功能，为这些功能分配到admin group中统一认证
