# backend/models/CategoryBasic.go
@@ -2,6 +2,7 @@ package models
 
 type CategoryBasic struct {
 	BaseModel
+	Identity          string             `json:"identity"`
 	Name              string             `json:"name"`
 	ParentId          int                `json:"parent_id"`
 	ProblemCategories []*ProblemCategory `gorm:"foreignKey:CategoryId;references:ID" json:"problem_categories"`
