# backend/router/app.go
@@ -17,11 +17,11 @@ func Router() *gin.Engine {
 	r.GET("/ping", service.Ping)
 
 	// 问题
-	r.GET("/problems/lists", service.GetProblemList)
-	r.GET("/problems/details", service.GetProblemDetail)
+	r.GET("/problems/list", service.GetProblemList)
+	r.GET("/problems/detail", service.GetProblemDetail)
 
 	// 用户
-	r.GET("/users/details", service.GetUserDetail)
+	r.GET("/users/detail", service.GetUserDetail)
 	r.POST("/users/login", service.Login)
 	r.POST("/users/register", service.Register)
 	r.POST("/users/code", service.SendCode)
@@ -29,9 +29,20 @@ func Router() *gin.Engine {
 	r.GET("/users/rank", service.GetRankList)
 
 	// 提交记录
-	r.GET("/submit/lists", service.GetSubmitList)
+	r.GET("/submit/list", service.GetSubmitList)
 
 	//管理员私有
+	authAdmin := r.Group("/admin", middlewares.AuthAdminCheck())
+	{
+		authAdmin.GET("/categories", service.GetCategoryList)
+		authAdmin.POST("/categories", service.CategoryCreate)
+		authAdmin.PUT("/categories", service.CategoryModify)
+		authAdmin.DELETE("/categories", service.CategoryDelete)
+	}
 	r.POST("/problems", middlewares.AuthAdminCheck(), service.ProblemCreate)
+	//r.GET("/categories", middlewares.AuthAdminCheck(), service.GetCategoryList)
+	//r.POST("/categories", middlewares.AuthAdminCheck(), service.CategoryCreate)
+	//r.PUT("/categories", middlewares.AuthAdminCheck(), service.CategoryModify)
+	//r.DELETE("/categories", middlewares.AuthAdminCheck(), service.CategoryDelete)
 	return r
 }
